--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "eslint . --fix && npm run lint:css:fix",
     "lint:css": "stylelint \"src/**/*.css\"",
     "lint:css:fix": "stylelint \"src/**/*.css\" --fix",
+    "generate:og": "CLANG_MODULE_CACHE_PATH=/tmp/clang-module-cache SWIFT_MODULECACHE_PATH=/tmp/swift-module-cache swiftc scripts/generate-og-default.swift -framework AppKit -o /tmp/generate-og-default && /tmp/generate-og-default public/og-default.png",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "prepare": "husky"
