--- a/package.json
+++ b/package.json
@@ -1,44 +1,53 @@
 {
   "name": "todorovic",
-  "type": "module",
   "version": "0.0.1",
+  "type": "module",
   "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
     "astro": "astro",
-    "lint": "eslint . && npm run lint:css",
-    "lint:fix": "eslint . --fix && npm run lint:css:fix",
-    "lint:css": "stylelint \"src/**/*.css\"",
-    "lint:css:fix": "stylelint \"src/**/*.css\" --fix",
-    "generate:og": "CLANG_MODULE_CACHE_PATH=/tmp/clang-module-cache SWIFT_MODULECACHE_PATH=/tmp/swift-module-cache swiftc scripts/generate-og-default.swift -framework AppKit -o /tmp/generate-og-default && /tmp/generate-og-default public/og-default.png",
+    "build": "astro build",
+    "dev": "astro dev",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "prepare": "husky"
+    "generate:og": "CLANG_MODULE_CACHE_PATH=/tmp/clang-module-cache SWIFT_MODULECACHE_PATH=/tmp/swift-module-cache swiftc scripts/generate-og-default.swift -framework AppKit -o /tmp/generate-og-default && /tmp/generate-og-default public/og-default.png",
+    "lint": "eslint . && npm run lint:css",
+    "lint:css": "stylelint \"src/**/*.css\"",
+    "lint:css:fix": "stylelint \"src/**/*.css\" --fix",
+    "lint:fix": "eslint . --fix && npm run lint:css:fix",
+    "prepare": "husky",
+    "preview": "astro preview"
   },
   "dependencies": {
-    "@astrojs/react": "^4.4.2",
-    "@astrojs/sitemap": "^3.7.0",
-    "astro": "^5.17.1",
-    "astro-pagefind": "^1.8.5",
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4",
-    "reading-time": "^1.5.0"
+    "@astrojs/react": "4.4.2",
+    "@astrojs/sitemap": "3.7.0",
+    "astro": "5.17.1",
+    "astro-pagefind": "1.8.5",
+    "react": "19.2.4",
+    "react-dom": "19.2.4",
+    "reading-time": "1.5.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.18.0",
-    "@types/react": "^19.2.10",
-    "@types/react-dom": "^19.2.3",
-    "eslint": "^9.18.0",
-    "eslint-plugin-astro": "^1.3.1",
-    "globals": "^15.14.0",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.2.7",
+    "@eslint/js": "9.18.0",
+    "@stylistic/eslint-plugin": "5.7.1",
+    "@types/react": "19.2.10",
+    "@types/react-dom": "19.2.3",
+    "eslint": "9.18.0",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-import-resolver-typescript": "4.4.4",
+    "eslint-plugin-astro": "1.3.1",
+    "eslint-plugin-import": "2.32.0",
+    "eslint-plugin-jsonc": "2.21.0",
+    "eslint-plugin-node-import": "1.0.5",
+    "eslint-plugin-prettier": "5.5.5",
+    "eslint-plugin-unused-imports": "4.3.0",
+    "globals": "15.14.0",
+    "husky": "9.1.7",
+    "jsonc-eslint-parser": "2.4.2",
+    "lint-staged": "16.2.7",
     "prettier": "3.8.1",
-    "prettier-plugin-astro": "^0.14.1",
-    "stylelint": "^17.1.0",
-    "stylelint-config-standard": "^40.0.0",
-    "stylelint-use-nesting": "^6.0.1",
-    "typescript-eslint": "^8.21.0"
+    "prettier-plugin-astro": "0.14.1",
+    "stylelint": "17.1.0",
+    "stylelint-config-standard": "40.0.0",
+    "stylelint-use-nesting": "6.0.1",
+    "typescript-eslint": "8.21.0"
   }
 }
