feat: complete blog sync and launch-readiness workflow

--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "generate:og": "CLANG_MODULE_CACHE_PATH=/tmp/clang-module-cache SWIFT_MODULECACHE_PATH=/tmp/swift-module-cache swiftc scripts/generate-og-default.swift -framework AppKit -o /tmp/generate-og-default && /tmp/generate-og-default public/og-default.png",
+    "generate:og:blog": "node scripts/generate-og-blog.mjs",
     "lint": "eslint . && npm run lint:css",
     "lint:css": "stylelint \"src/**/*.css\"",
     "lint:css:fix": "stylelint \"src/**/*.css\" --fix",
     "lint:fix": "eslint . --fix && npm run lint:css:fix",
+    "prebuild": "npm run generate:og:blog",
     "prepare": "husky",
     "preview": "astro preview"
   },
