feat: add blog-authoring workflow and archive related openspec changes

--- a/openspec/config.yaml
+++ b/openspec/config.yaml
@@ -23,8 +23,7 @@ context: |
 
   ## Custom Schemas
   - astro-component: For creating new Astro components
-  - astro-page: For creating new pages
-  - blog-content: For creating blog posts
+  - blog-authoring: For inspiration, research, draft, and edit blog workflows
 
 rules:
   proposal:
